--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ google_analytics: G-7YEC2XK9GR
 owner:
   name:           Peter Fasogbon 
   avatar:         Peter_Fasogbon.jpeg
-  bio:            Senior Scientist, Computer Vision
-  location:       Tampere, Finland
+  bio:            Senior Researcher, Computer Vision
+  location:       Espoo, Finland
   email:          peter.fasogbon89@gmail.com
 
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  linkedin: peter-fasogbon-phd-12386515
+  linkedin: peter-fasogbon-olu
   google_scholar: GZwyp3cAAAAJ&hl
   researchgate: Peter-Fasogbon
   #github: rameau-fr
